--- a/index.html
+++ b/index.html
@@ -14,11 +14,21 @@
         <form action="to_do">
             <label for="to_do">What do you have to do?</label>
             <br>
-            <input type="text" id="to_do" name="to_do" value="">
-            <input type="button" id="add" value="&#10003">
-            <input type="button" id="clear" value="X">
+            <input type="text" id="to_Do" name="to_do" value="">
+            <input type="button" id="add" value="+">
+            <input type="button" id="clear_Input" value="X">
         </form>
 
+        
+    </div>
+    
+    <div id="listCon">
+        <ul id="listP">
+            <li class="listCh">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores, perferendis.
+                <input type="button" id = "done" value="&#10003">
+                <input type="button" id = "clear_Item" value="X">
+            </li>
+        </ul>
     </div>
 
     <script src="script.js"></script>
